--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,5 @@
 name: Build a Simple Crop Detection Model with PyTorch
 title: null
+markdown: kramdown
+theme: jekyll-theme-cayman
+exclude: [vendor]
