--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,3 +3,6 @@ title: null
 markdown: kramdown
 theme: jekyll-theme-cayman
 exclude: [vendor]
+sidebar:
+  title: "Sample Title"
+  nav: sidebar-sample
